[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/notification_manager.gd" id="1_notification"]

[node name="NotificationManager" type="CanvasLayer" groups=["notification_manager"]]
layer = 100
script = ExtResource("1_notification")

[node name="NotificationContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 120.0
offset_right = 200.0
offset_bottom = 400.0
grow_horizontal = 2
theme_override_constants/separation = 8

[node name="AnnouncementContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 200.0
offset_right = 300.0
offset_bottom = 350.0
grow_horizontal = 2
alignment = 1
theme_override_constants/separation = 0
